--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -1,5 +1,7 @@
-@import "../../bootstrap4";
+//@import "../../bootstrap4";
 
 div{
   border-radius: 5px;
+  display: flex;
+  transition: 0.2ms;
 }
