--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -4,4 +4,11 @@ div{
   border-radius: 5px;
   display: flex;
   transition: 0.2ms;
+  text-decoration: underline;
+}
+
+.bredik{
+  width: 500px;
+  height: 500px;
+  //background-image: url('../../img/svg');
 }
