--- a/src/app/scss/header.scss
+++ b/src/app/scss/header.scss
@@ -10,10 +10,10 @@
 }
 
 .header__logo{
-  background: url("../../img/svg/bredik.svg") no-repeat;
+  //background: url("../../img/svg/bredik.svg") no-repeat;
 }
 .header__text{
-  text-align: center;
+  //text-align: center;
 }
 .header__project-description{
   min-width: 435px;
