--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -5,7 +5,22 @@
 
 main{
   color: $dark;
-  background: $light;
+
+  //background: $light;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: $light url("../../img/svg/bredik.svg") no-repeat;
+    background-size: 50%;
+    transform: scale(-1, 1)
+  }
 }
 
 a{
