--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -1,11 +1,15 @@
 .main-menu{
-  opacity: 0.8;
+  //opacity: 0.8;
   //background-color: transparent !important;
   border: 1px solid $blue;
   & a{
     color: $light;
+    &:hover{
+      color: lighten($light, 10%)
+    }
   }
-  & span{
+  & div{
     color: $light !important;
+    width: 100%;
   }
 }
