--- a/src/app/scss/header.scss
+++ b/src/app/scss/header.scss
@@ -1,11 +1,16 @@
 .header{
-  padding-bottom: 15px;
+  padding-bottom: 25px;
 }
-.header__project-name a{
-  font-size: 150px;
+.header__project-name {
+  margin-bottom: -12px;
+  a{
+  font-size: 100px;
+}
 }
 .header__project-description{
+  font-size: 18px;
   min-width: 435px;
+  padding-left: 6px;
 }
 .header__login-btn-wrapper{
   padding-top: 15px;
@@ -16,6 +21,7 @@
   //background: url("../../img/svg/bredik.svg") no-repeat;
 }
 .header__text{
+  margin-top: 10px;
   //text-align: center;
 }
 
