--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -1,6 +1,7 @@
 .main-menu{
   //opacity: 0.8;
   //background-color: transparent !important;
+  max-width: 100%;
   border: 1px solid $blue;
   & a{
     color: $light;
@@ -12,4 +13,13 @@
     color: $light !important;
     width: 100%;
   }
+  .nav {
+    justify-content: space-around;
+    width: 100%;
+  }
+}
+
+.btn-authorization-align {
+  margin-top: 30px;
+  margin-right: 40px;
 }
