upd index-content

--- a/src/app/scss/header.scss
+++ b/src/app/scss/header.scss
@@ -25,6 +25,11 @@
   //text-align: center;
 }
 
+.btn-authorization-align {
+  margin-top: 30px;
+  margin-right: 40px;
+}
+
 
 @media screen and (max-device-width: 600px){
   .header__project-name a{
