--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -8,9 +8,11 @@
 
 main{
   color: $dark;
+  background: #faf5f9;
 
   //background: $light;
-  &:before {
+  //todo обсудить этот момент с Костей
+  /*&:before {
     content: '';
     position: absolute;
     top: 0;
@@ -20,10 +22,15 @@ main{
     width: 100%;
     height: 100%;
     z-index: -1;
-    background: $light url("../../img/svg/bredik.svg") no-repeat;
-    background-size: 50%;
+    background: !*$light url("../../img/svg/bredik.svg")*! #faf5f9 no-repeat;
+    background-size: 100%;
     transform: scale(-1, 1)
-  }
+  }*/
+}
+
+// Переопределила контейнер бутстрапа, а то был слишком маленький (960px)
+.container {
+  max-width: 1300px;
 }
 
 a{
@@ -38,9 +45,3 @@ a{
 nav{
   border-radius: 5px;
 }
-//
-//@media screen and (max-device-width: 1200px){
-//  main{
-//    background: $light;
-//  }
-//}
