--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -36,7 +36,7 @@
 
 .footer-top {
   min-height: 60px;
-  background: url("../../img/footer-cat.png") no-repeat;
+  //background: url("../../img/footer-cat.png") no-repeat;
   background-size: 60%;
   background-position: bottom;
 }
