--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -1,8 +1,9 @@
-.main-menu-container {
+/*.main-menu-container {
   background: $blue;
-}
+}*/
 
 .main-menu{
+  background-color: #0B90AA;
   max-width: 100%;
   border: 1px solid $blue;
   margin-bottom: 50px;
@@ -22,27 +23,17 @@
   }
 }
 
-//todo это стили для контента на главной, потом сделать файл и перенести туда
-.card-text {
-  font-size: 14px;
-}
 
-.footer {
-  //background: $dark;
-  //background: url("../../img/footer-cat.png") no-repeat;
-  min-height: 126px;
-  //background-size: 100%;
-}
+/*@media screen and (min-width: 732px) {
+  .navbar-collapse {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+  }
+}*/
 
-.footer-top {
-  min-height: 60px;
-  //background: url("../../img/footer-cat.png") no-repeat;
-  background-size: 60%;
-  background-position: bottom;
-}
 
-.footer-bottom {
-  background: $dark;
-  min-height: 40px;
-}
+
 
