fix render problem for admon

--- a/src/admin/scss/top-block.scss
+++ b/src/admin/scss/top-block.scss
@@ -1,5 +1,5 @@
 .top-block {
-  background-color: #FFF;
+  background-color: #F00 !important;
   border: 0;
   margin-bottom: 0;
   border-bottom: 1px solid #e6e5e5;
