--- a/src/admin/scss/admin-main.scss
+++ b/src/admin/scss/admin-main.scss
@@ -1,25 +1,2 @@
 @import "../../bootstrap4";
-@import "top-block";
-
-
-.top-block {
-  background-color: #FFF;
-  border: 0;
-  margin-bottom: 0;
-  border-bottom: 1px solid #e6e5e5;
-  padding: 0;
-}
-
-.be-navbar-header {
-  display: flex;
-  width: 230px;
-}
-
-.be-right-navbar {
-  padding-right: 20px;
-  width: calc(100% - 230px);
-}
-
-.be-user-nav {
-  margin-right: 0;
-}
+@import "./top-block";
