replace admin in main app: add admin styles to main styles

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -5,6 +5,7 @@
 @import "variables";
 @import "bootstrap-theme";
 
+@import "./admin/admin-main";
 @import "header";
 @import "main-menu";
 @import "main-content";
