--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -1,6 +1,5 @@
-@import "../../bootstrap4";
+@import "~normalize";
 @import "variables";
-@import "bootstrap-theme";
 
 @import "./admin/admin-main";
 @import "header";
@@ -25,26 +24,13 @@
   font-style: normal;
 }
 
+body{
+  margin: 0;
+}
+
 main{
   color: $dark;
-  background: #faf5f9;
-
-  //background: $light;
-  //todo обсудить этот момент с Костей
-  /*&:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background: !*$light url("../../img/svg/bredik.svg")*! #faf5f9 no-repeat;
-    background-size: 100%;
-    transform: scale(-1, 1)
-  }*/
+  padding: 10px;
 }
 
 a{
