--- a/src/app/scss/header.scss
+++ b/src/app/scss/header.scss
@@ -1,10 +1,14 @@
 .main-header{
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title{
+
 }
 
 .login-block{
-  justify-self: flex-end;
-  align-self: center;
+
 }
