--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -1,39 +1,26 @@
-/*.main-menu-container {
-  background: $blue;
-}*/
+.sections-menu{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  background-color: $blue;
+  padding: 5px;
+  border-radius: 5px;
+}
 
-.main-menu{
-  background-color: #0B90AA;
-  max-width: 100%;
-  border: 1px solid $blue;
-  margin-bottom: 50px;
-  & a{
-    color: $light;
-    &:hover{
-      color: lighten($light, 10%)
-    }
-  }
-  & div{
-    color: $light !important;
-    width: 100%;
-  }
-  .nav {
-    justify-content: space-around;
-    width: 100%;
+.sections-menu__item{
+  margin: 0 5px;
+  color: $light;
+  line-height: 40px;
+  padding: 0 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  &:hover{
+    background-color: lighten($light, 5%);
+    color: $blue;
   }
 }
 
-
-/*@media screen and (min-width: 732px) {
-  .navbar-collapse {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-  }
-}*/
-
-
-
-
+.sections-menu__item_active{
+  background-color: $light;
+  color: $blue;
+}
