--- a/src/app/scss/main-content.scss
+++ b/src/app/scss/main-content.scss
@@ -1,3 +1,28 @@
-.card-text {
-  font-size: 14px;
+.card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 260px;
+  background-color: $blue;
+  color: $light;
+  padding: 15px 5px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.card__image{
+  width: 220px;
+  border-radius: 50px;
+}
+
+.card__link{
+  background-color: $light;
+  color: $dark;
+  padding: 10px 25px;
+  border-radius: 5px;
+  text-decoration: none;
+  &:hover{
+    background-color: $dark;
+    color: $light;
+  }
 }
