--- a/src/app/scss/main-content.scss
+++ b/src/app/scss/main-content.scss
@@ -1,3 +1,8 @@
+.cards-list{
+  display: flex;
+  flex-direction: row;
+}
+
 .card{
   display: flex;
   flex-direction: column;
@@ -5,6 +10,7 @@
   width: 260px;
   background-color: $blue;
   color: $light;
+  margin: 10px;
   padding: 15px 5px;
   border-radius: 10px;
   text-align: center;
