pin "demo" button to bottom border

--- a/src/app/scss/main-content.scss
+++ b/src/app/scss/main-content.scss
@@ -24,6 +24,7 @@
 .card__link{
   background-color: $light;
   color: $dark;
+  margin-top: auto;
   padding: 10px 25px;
   border-radius: 5px;
   text-decoration: none;
