--- a/src/app/scss/main-content.scss
+++ b/src/app/scss/main-content.scss
@@ -1,35 +1,76 @@
 .cards-list{
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
 }
 
 .card{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 260px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "image image image"
+    "title title title"
+    "button button button"
+    "stack stack stack";
+  grid-row-gap: 5px;
+
+  width: 100%;
   background-color: $blue;
   color: $light;
   margin: 10px;
   padding: 15px 5px;
   border-radius: 10px;
   text-align: center;
+  @media (min-width: 480px) {
+    grid-gap: 15px;
+    grid-template-areas:
+        "image title title"
+        "image title title"
+        "stack button button";
+  }
+}
+
+.card__title-wrapper{
+  grid-area: title;
 }
 
 .card__image{
   width: 220px;
   border-radius: 50px;
+  grid-area: image;
+  margin: 0 auto;
 }
 
 .card__link{
   background-color: $light;
   color: $dark;
-  margin-top: auto;
-  padding: 10px 25px;
   border-radius: 5px;
+  width: 150px;
+  margin: 5px auto;
+  padding: 10px 25px;
   text-decoration: none;
+  grid-area: button;
   &:hover{
     background-color: $dark;
     color: $light;
+  }
+}
+
+.card__dev-stack{
+  grid-area: stack;
+  margin: 5px auto;
+}
+
+@media (min-width: 650px){
+  .card{
+    display: flex;
+    flex-direction: column;
+    width: 260px;
+    text-align: center;
+  }
+
+  .card__link {
+    margin-top: auto;
+    align-self: unset;
   }
 }
