--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -1,26 +1,46 @@
-.sections-menu{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-  background-color: $blue;
-  padding: 5px;
-  border-radius: 5px;
+// burger menu
+
+.sections-menu_active{
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.sections-menu__item{
-  margin: 0 5px;
-  color: $light;
-  line-height: 40px;
-  padding: 0 10px;
-  border-radius: 5px;
-  text-decoration: none;
-  &:hover{
-    background-color: lighten($light, 5%);
+
+// desktop menu
+  .sections-menu{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    background-color: $blue;
+    padding: 5px;
+    border-radius: 5px;
+    &:after{
+      display: none;
+    }
+  }
+
+  .sections-menu__item{
+    margin: 0 5px;
+    color: $light;
+    line-height: 40px;
+    padding: 0 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    &:hover{
+      background-color: lighten($light, 5%);
+      color: $blue;
+    }
+  }
+
+  .sections-menu__item_active{
+    background-color: $light;
     color: $blue;
   }
-}
 
-.sections-menu__item_active{
-  background-color: $light;
-  color: $blue;
-}
+
