--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -1,6 +1,41 @@
+// desktop menu
+.sections-menu {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  background-color: $blue;
+  padding: 5px;
+  border-radius: 5px;
+  &:after {
+    display: none;
+  }
+}
+
+.sections-menu__item {
+  margin: 0 5px;
+  color: $light;
+  line-height: 40px;
+  padding: 0 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  &:hover {
+    background-color: lighten($light, 5%);
+    color: $blue;
+  }
+}
+
+.sections-menu__item_active {
+  background-color: $light;
+  color: $blue;
+}
+
 // burger menu
 
-.sections-menu_active{
+.sections-menu-burger {
+  transform: scale(0);
+}
+
+.sections-menu-burger_active {
   display: block;
   position: absolute;
   top: 0;
@@ -11,36 +46,12 @@
   height: 100%;
 }
 
-
-// desktop menu
-  .sections-menu{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    background-color: $blue;
-    padding: 5px;
-    border-radius: 5px;
-    &:after{
-      display: none;
-    }
-  }
-
-  .sections-menu__item{
-    margin: 0 5px;
-    color: $light;
-    line-height: 40px;
-    padding: 0 10px;
-    border-radius: 5px;
-    text-decoration: none;
-    &:hover{
-      background-color: lighten($light, 5%);
-      color: $blue;
-    }
-  }
-
-  .sections-menu__item_active{
-    background-color: $light;
-    color: $blue;
-  }
-
-
+.burger-btn{
+  position: fixed;
+  top: 3px;
+  left: 3px;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  opacity: 0.5;
+}
