--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -30,22 +30,6 @@
 }
 
 // burger menu
-
-.sections-menu-burger {
-  transform: scale(0);
-}
-
-.sections-menu-burger_active {
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .burger-btn{
   position: fixed;
   top: 3px;
@@ -54,4 +38,26 @@
   height: 40px;
   border-radius: 5px;
   opacity: 0.5;
+  z-index: 1;
+}
+
+.sections-menu-burger {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: scale(0);
+  transition: 300ms;
+}
+
+.sections-menu-burger_active {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: $blue;
+  transform: none;
 }
