--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -34,11 +34,66 @@
   position: fixed;
   top: 3px;
   left: 3px;
-  width: 40px;
+  width: 41px;
   height: 40px;
   border-radius: 5px;
-  opacity: 0.5;
+  opacity: 0.7;
   z-index: 1;
+  border: none;
+  outline-color: transparent;
+  &:before {
+    display: inline-block;
+    content: '';
+    height: 3px;
+    width: 21px;
+    background-color: black;
+    position: relative;
+    top: -3px;
+    transition: 200ms;
+    transition-delay: 100ms;
+  }
+  span{
+    display: inline-block;
+    height: 3px;
+    width: 21px;
+    background-color: black;
+    position: relative;
+    top: -11px;
+    transition: 200ms;
+  }
+  &:after{
+    display: inline-block;
+    content: '';
+    height: 3px;
+    width: 21px;
+    background-color: black;
+    position: relative;
+    top: -19px;
+    transition: 200ms;
+    transition-delay: 200ms;
+  }
+  &:hover{
+
+  }
+}
+
+.burger-btn_active{
+  &:before{
+    transform-origin: 3px;
+    transform: rotate(45deg);
+    top: 1px;
+    margin-left: 2px;
+  }
+  &:after{
+    transform-origin: 3px;
+    transform: rotate(-45deg);
+    top: -24px;
+    margin-left: 2px;
+  }
+  span{
+    opacity: 0;
+    margin-left: 2px;
+  }
 }
 
 .sections-menu-burger {
