--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -40,37 +40,38 @@
   opacity: 0.7;
   z-index: 1;
   border: none;
+  background-color: $light;
   outline-color: transparent;
   &:before {
     display: inline-block;
     content: '';
     height: 3px;
     width: 21px;
-    background-color: black;
+    background-color: $dark;
     position: relative;
     top: -3px;
-    transition: 200ms;
-    transition-delay: 100ms;
+    transition: 300ms;
+    transition-delay: 150ms;
   }
   span{
     display: inline-block;
     height: 3px;
     width: 21px;
-    background-color: black;
+    background-color: $dark;
     position: relative;
     top: -11px;
-    transition: 200ms;
+    transition: 300ms;
   }
   &:after{
     display: inline-block;
     content: '';
     height: 3px;
     width: 21px;
-    background-color: black;
+    background-color: $dark;
     position: relative;
     top: -19px;
-    transition: 200ms;
-    transition-delay: 200ms;
+    transition: 300ms;
+    transition-delay: 300ms;
   }
   &:hover{
 
