--- a/src/app/scss/main-content.scss
+++ b/src/app/scss/main-content.scss
@@ -42,7 +42,7 @@
 
 .card__link{
   background-color: $orange;
-  color: $dark;
+  color: $light;
   border-radius: 5px;
   width: 150px;
   margin: 5px auto;
