--- a/src/app/scss/footer.scss
+++ b/src/app/scss/footer.scss
@@ -10,6 +10,8 @@
   min-height: 90px;
   margin-top: 50px;
   display: flex;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .footer-top__nav {
@@ -33,6 +35,8 @@
   background: $orange;
   min-height: 30px;
   display: flex;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .footer-bottom__copyright {
