--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -1,11 +1,17 @@
 // desktop menu
 .sections-menu {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
   background-color: $blue;
   padding: 5px;
-  border-radius: 5px;
+  width: 200px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  border-right: $orange solid 3px;
   &:after {
     display: none;
   }
@@ -18,6 +24,7 @@
   padding: 0 10px;
   border-radius: 5px;
   text-decoration: none;
+  width: 100%;
   &:hover {
     background-color: lighten($light, 5%);
     color: $blue;
