--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -28,14 +28,23 @@
   box-sizing: border-box;
 }
 
-body{
+html, body, .container-fluid{
   margin: 0;
+  height: 100%;
+  min-height: 100%;
 }
 
 main{
   color: $dark;
-  padding: 10px;
+  padding: 10px 0 0 200px;
+  border-top: $orange 3px solid;
+  border-right: $orange 3px solid;
   margin: 0 auto;
+}
+
+.container-fluid{
+  display: flex;
+  flex-direction: column;
 }
 
 a{
