--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -28,7 +28,7 @@
   box-sizing: border-box;
 }
 
-html, body, .container-fluid{
+html, body{
   margin: 0;
   height: 100%;
   min-height: 100%;
@@ -36,7 +36,7 @@ html, body, .container-fluid{
 
 main{
   color: $dark;
-  padding: 10px 0 0 200px;
+  padding-left: 200px;
   border-top: $orange 3px solid;
   border-right: $orange 3px solid;
   margin: 0 auto;
@@ -45,6 +45,7 @@ main{
 .container-fluid{
   display: flex;
   flex-direction: column;
+  min-height: calc(100vh - 3px);
 }
 
 a{
