--- a/src/app/scss/main-menu.scss
+++ b/src/app/scss/main-menu.scss
@@ -6,7 +6,7 @@
   align-items: center;
   background-color: $blue;
   padding: 5px;
-  width: 200px;
+  width: $leftSideWidth;
   position: fixed;
   top: 0;
   left: 0;
