--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -37,8 +37,7 @@ html, body{
 main{
   color: $dark;
   padding-left: $leftSideWidth;
-  border-top: $orange 3px solid;
-  border-right: $orange 3px solid;
+  border: $orange 3px solid;
   margin: 0 auto;
 }
 
