--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 
 @import "admin/admin-main";
 @import "header";
+@import "left-block";
 @import "main-menu";
 @import "main-content";
 @import "footer";
