--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,7 +10,7 @@ body{
   grid-template-columns: 10rem auto;
   grid-template-rows: 10rem calc(100vh - 20rem) 10rem;
   grid-template-areas:
-          "sideBar header"
+          "header content"
           "sideBar content"
           "footer footer";
 }
@@ -18,6 +18,8 @@ body{
 .mainHeader{
   grid-area: header;
   text-align: center;
+  background-color: darkgreen;
+  color: white;
 }
 
 .sideBar{
@@ -25,6 +27,7 @@ body{
   background-color: darkgreen;
   color: white;
   border-right: 2px solid black;
+  height: 100%;
 }
 
 .content{
