--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,3 @@
-@import './vendor/prism';
-
 *, *:after, *:before{
   box-sizing: border-box;
 }
@@ -40,3 +38,4 @@ body{
   grid-area: footer;
 }
 
+@import './vendor/prism.scss';
