--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -2,4 +2,8 @@
   grid-area: footer;
   background-color: darkgrey;
   color: #fff;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
+
