--- a/src/scss/components/grid.scss
+++ b/src/scss/components/grid.scss
@@ -1,7 +1,7 @@
 .container{
   display: grid;
   grid-template-columns: 10rem auto;
-  grid-template-rows: 10rem calc(100vh - 20rem) 10rem;
+  grid-template-rows: 10rem auto 5rem;
   grid-template-areas:
           "header content"
           "sideBar content"
