--- a/src/scss/components/grid.scss
+++ b/src/scss/components/grid.scss
@@ -1,6 +1,6 @@
 .container{
   display: grid;
-  grid-template-columns: 10rem auto;
+  grid-template-columns: max-content auto;
   grid-template-rows: 10rem auto 5rem;
   grid-template-areas:
           "header content"
