--- a/src/scss/components/sideBar.scss
+++ b/src/scss/components/sideBar.scss
@@ -1,6 +1,7 @@
 .sideBar{
-  background-color: darkgreen;
-  color: white;
-  border-right: 2px solid black;
+  background-color: white;
+  color: black;
+  border-right: 1px solid black;
+  padding: 5em 2em;
   height: 100%;
 }
