--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,5 @@
 .mainHeader{
   text-align: center;
-  background-color: darkgreen;
-  color: white;
+  background-color: white;
+  border-right: 1px solid black;
 }
