--- a/src/scss/core/baseStyles.scss
+++ b/src/scss/core/baseStyles.scss
@@ -1,6 +1,15 @@
 *, *:after, *:before{
   box-sizing: border-box;
+  transition: all 300ms;
 }
 body{
   margin: 0;
+}
+
+a{
+  color: #000;
+  text-decoration: none;
+  &:hover{
+    color: #ff4500 !important;
+  }
 }
