--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,4 @@
 .mainHeader{
   text-align: center;
-  background-color: white;
-  border-right: 1px solid black;
+  border-right: 1px solid $black;
 }
