--- a/src/scss/components/sideBar.scss
+++ b/src/scss/components/sideBar.scss
@@ -1,6 +1,5 @@
 .sideBar{
-  background-color: white;
-  border-right: 1px solid black;
+  border-right: 1px solid $black;
   padding: 5em 2em;
   height: 100%;
 }
