--- a/src/scss/core/baseStyles.scss
+++ b/src/scss/core/baseStyles.scss
@@ -7,9 +7,9 @@ body{
 }
 
 a{
-  color: #000;
+  color: $black;
   text-decoration: none;
   &:hover{
-    color: #ff4500 !important;
+    color: $orange;
   }
 }
