--- a/src/scss/components/sideBar.scss
+++ b/src/scss/components/sideBar.scss
@@ -3,3 +3,12 @@
   padding: 5em 2em;
   height: 100%;
 }
+
+.sideMenu{
+  list-style: none;
+  padding: 0;
+  li a{
+    padding-bottom: 2em;
+  }
+
+}
