--- a/src/scss/components/grid.scss
+++ b/src/scss/components/grid.scss
@@ -1,7 +1,7 @@
 .container{
   display: grid;
   grid-template-columns: max-content auto;
-  grid-template-rows: 10rem auto 5rem;
+  grid-template-rows: 10rem minmax(calc(100vh - 15rem), auto) 5rem;
   grid-template-areas:
           "header content"
           "sideBar content"
